update html files

--- a/tengelawfirm_wireframes_preview_-_home.html
+++ b/tengelawfirm_wireframes_preview_-_home.html
@@ -1168,7 +1168,7 @@
       <div id="u5021" class="ax_default paragraph1">
         <div id="u5021_div" class=""></div>
         <div id="u5021_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">DENVER OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">1515 Wynkoop Street </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 360 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Denver, CO 80202</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">DENVER OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">1515 Wynkoop Street </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 360 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Denver, CO 80202</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
         </div>
       </div>
 
@@ -1176,7 +1176,7 @@
       <div id="u5022" class="ax_default paragraph1">
         <div id="u5022_div" class=""></div>
         <div id="u5022_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">BOULDER OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">2575 Pearl Street </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 230 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Boulder, CO 80302</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">BOULDER OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">2575 Pearl Street </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 230 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Boulder, CO 80302</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
         </div>
       </div>
 
@@ -1184,7 +1184,7 @@
       <div id="u5023" class="ax_default paragraph1">
         <div id="u5023_div" class=""></div>
         <div id="u5023_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">FORT COLLINS OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">123 N. College Avenue </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 200 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Fort Collins, CO 80524</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 970.212.4777</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">FORT COLLINS OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">123 N. College Avenue </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 200 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Fort Collins, CO 80524</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 970.212.4777</span></p>
         </div>
       </div>
 
