--- a/tien_ng_-_ux_architect_-_mobile_site.html
+++ b/tien_ng_-_ux_architect_-_mobile_site.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>CleanUXD -&nbsp; Mobile Site</title>
+    <title>Tien Ng - UX Architect - Mobile Site</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -9,7 +9,7 @@
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/cleanuxd_-__mobile_site/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/tien_ng_-_ux_architect_-_mobile_site/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato" type="text/css" rel="stylesheet"/>
@@ -35,7 +35,7 @@
     <script src="resources/scripts/prototypePre.js"></script>
     <script src="data/document.js"></script>
     <script src="resources/scripts/prototypePost.js"></script>
-    <script src="files/cleanuxd_-__mobile_site/data.js"></script>
+    <script src="files/tien_ng_-_ux_architect_-_mobile_site/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -47,7 +47,7 @@
 
       <!-- Unnamed (Rectangle) -->
       <div id="u7002" class="ax_default box_1">
-        <img id="u7002_img" class="img " src="images/cleanuxd_-__mobile_site/u7002.png"/>
+        <img id="u7002_img" class="img " src="images/tien_ng_-_ux_architect_-_mobile_site/u7002.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -84,7 +84,7 @@
 
       <!-- Unnamed (Image) -->
       <div id="u7008" class="ax_default image1">
-        <img id="u7008_img" class="img " src="images/cleanuxd_-__homepage/u128.png"/>
+        <img id="u7008_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u128.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -97,201 +97,164 @@
 
       <!-- Unnamed (Rectangle) -->
       <div id="u7010" class="ax_default box_1">
-        <img id="u7010_img" class="img " src="images/cleanuxd_-__mobile_site/u7010.png"/>
+        <img id="u7010_img" class="img " src="images/tien_ng_-_ux_architect_-_mobile_site/u7010.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u7011" class="ax_default box_1">
-        <img id="u7011_img" class="img " src="images/cleanuxd_-__mobile_site/u7011.png"/>
+        <img id="u7011_img" class="img " src="images/tien_ng_-_ux_architect_-_mobile_site/u7011.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u7012" class="ax_default paragraph1">
         <div id="u7012_div" class=""></div>
         <div id="u7012_text" class="text ">
-          <p><span style="font-family:'Lato Regular', 'Lato';font-weight:400;">&#149; Are you a start-up looking for a UX Designer to bring your product to live?</span></p><p><span style="font-family:'Lato Regular', 'Lato';font-weight:400;">&#149; Are you a project manager in-need for a UX team member? </span></p><p><span style="font-family:'Lato Regular', 'Lato';font-weight:400;">&#149; Or simply, you just need your ideas become seeable and clickable?</span></p><p><span style="font-family:'Lato Regular', 'Lato';font-weight:400;">I know the feeling to put an intangible idea and turn it into a visual interactable thing is a bit overwhelming. But we can do it step-by-step with </span><a id="u7013" class="link"><span style="font-family:'Lato Regular', 'Lato';font-weight:400;color:#1E1E1E;">my Clean UXD process</span></a><span style="font-family:'Lato Regular', 'Lato';font-weight:400;color:#1E1E1E;">.</span><span style="font-family:'Lato Regular', 'Lato';font-weight:400;"> </span></p><p><span style="font-family:'Lato Bold', 'Lato';font-weight:700;">Let's get started here:</span><span style="font-family:'Lato Regular', 'Lato';font-weight:400;"> </span></p><p><span style="font-family:'Lato Regular', 'Lato';font-weight:400;"><br></span></p>
+          <p><span>Thank you for stopping-over on my website. </span></p><p><span>I hope you will like my UX work samples and find it interesting! </span></p><p><span>I'm now looking for a remote full-time UX position where I can devote all of my UX skills and experience. So if you are looking for a UX&nbsp; member to join your team, please don't hesitate to contact me :) </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7014" class="ax_default heading_1">
+      <div id="u7013" class="ax_default heading_1">
+        <div id="u7013_div" class=""></div>
+        <div id="u7013_text" class="text ">
+          <p><span>Hi, I'm looking for a remote full-time </span></p><p><span>UX position now :)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7014" class="ax_default paragraph1">
         <div id="u7014_div" class=""></div>
         <div id="u7014_text" class="text ">
-          <p><span>How can I help you?</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Group) -->
-      <div id="u7015" class="ax_default" data-left="36" data-top="2138" data-width="250" data-height="153">
-
-        <!-- Unnamed (Shape) -->
-        <div id="u7016" class="ax_default box_1">
-          <img id="u7016_img" class="img " src="images/cleanuxd_-__mobile_site/u7016.png"/>
-        </div>
-
-        <!-- Unnamed (Shape) -->
-        <div id="u7017" class="ax_default box_1">
-          <img id="u7017_img" class="img " src="images/cleanuxd_-__mobile_site/u7017.png"/>
-        </div>
-
-        <!-- Unnamed (Rectangle) -->
-        <div id="u7018" class="ax_default heading_1">
-          <div id="u7018_div" class=""></div>
-          <div id="u7018_text" class="text ">
-            <p><span>TELL ME MORE!</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Image) -->
-        <div id="u7019" class="ax_default image1">
-          <img id="u7019_img" class="img " src="images/cleanuxd_-__mobile_site/u7019.png"/>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7020" class="ax_default paragraph1">
-        <div id="u7020_div" class=""></div>
-        <div id="u7020_text" class="text ">
           <p><span>This mobile-site is too small for my UX work samples preview. </span></p><p><span>So it will proceed to the website's desktop version.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7021" class="ax_default box_1">
-        <div id="u7021_div" class=""></div>
-        <div id="u7021_text" class="text ">
+      <div id="u7015" class="ax_default box_1">
+        <div id="u7015_div" class=""></div>
+        <div id="u7015_text" class="text ">
           <p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Tiki</span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Mobile App UX Design</span></p><p style="font-size:18px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p>
         </div>
       </div>
 
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7016" class="ax_default paragraph1">
+        <div id="u7016_div" class=""></div>
+        <div id="u7016_text" class="text ">
+          <p><span>must-read</span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Image) -->
-      <div id="u7022" class="ax_default image1">
-        <img id="u7022_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+      <div id="u7017" class="ax_default image1">
+        <img id="u7017_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u246.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7018" class="ax_default heading_1">
+        <div id="u7018_div" class=""></div>
+        <div id="u7018_text" class="text ">
+          <p><span>Work Samples</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7019" class="ax_default box_1">
+        <div id="u7019_div" class=""></div>
+        <div id="u7019_text" class="text ">
+          <p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Dr. Puneet Gupta</span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Website Wireframing Project</span></p><p style="font-size:18px;line-height:28px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u7020" class="ax_default image1">
+        <img id="u7020_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u233.png"/>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u7021" class="ax_default image1">
+        <img id="u7021_img" class="img " src="images/tien_ng_-_ux_architect_-_mobile_site/u7021.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7022" class="ax_default paragraph1">
+        <div id="u7022_div" class=""></div>
+        <div id="u7022_text" class="text ">
+          <p><span>UX Experience Highlights: </span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u7023" class="ax_default paragraph1">
         <div id="u7023_div" class=""></div>
         <div id="u7023_text" class="text ">
-          <p><span>must-read</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u7024" class="ax_default image1">
-        <img id="u7024_img" class="img " src="images/cleanuxd_-__homepage/u246.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7025" class="ax_default heading_1">
-        <div id="u7025_div" class=""></div>
-        <div id="u7025_text" class="text ">
-          <p><span>Work Samples</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7026" class="ax_default box_1">
-        <div id="u7026_div" class=""></div>
-        <div id="u7026_text" class="text ">
-          <p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Dr. Puneet Gupta</span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Website Wireframing Project</span></p><p style="font-size:18px;line-height:28px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u7027" class="ax_default image1">
-        <img id="u7027_img" class="img " src="images/cleanuxd_-__homepage/u233.png"/>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u7028" class="ax_default image1">
-        <img id="u7028_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7029" class="ax_default box_1">
-        <div id="u7029_div" class=""></div>
-        <div id="u7029_text" class="text ">
-          <p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:28px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;line-height:36px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';"><br></span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Tenge Law Firm</span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';">Website Wireframing Project</span></p><p style="font-size:16px;line-height:28px;"><span style="font-family:'Roboto Regular', 'Roboto';"><br></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u7030" class="ax_default image1">
-        <img id="u7030_img" class="img " src="images/cleanuxd_-__homepage/u244.png"/>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u7031" class="ax_default image1">
-        <img id="u7031_img" class="img " src="images/cleanuxd_-__mobile_site/u7031.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7032" class="ax_default paragraph1">
-        <div id="u7032_div" class=""></div>
-        <div id="u7032_text" class="text ">
-          <p><span>UX Experience Highlights: </span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u7033" class="ax_default paragraph1">
-        <div id="u7033_div" class=""></div>
-        <div id="u7033_text" class="text ">
           <p><span>Copyright © 2018&nbsp; -&nbsp; Tien Nguyen. </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7034" class="ax_default box_1">
-        <div id="u7034_div" class=""></div>
-        <div id="u7034_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; View my </span><a id="u7035" class="link"><span style="color:#669900;">Upwork Profile </span></a><span>&nbsp; </span></p>
+      <div id="u7024" class="ax_default box_1">
+        <div id="u7024_div" class=""></div>
+        <div id="u7024_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; View my </span><a id="u7025" class="link"><span style="color:#669900;">Upwork Profile </span></a><span>&nbsp; </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7036" class="ax_default image1">
-        <img id="u7036_img" class="img " src="images/cleanuxd_-__homepage/u17.png"/>
+      <div id="u7026" class="ax_default image1">
+        <img id="u7026_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u17.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7037" class="ax_default box_1">
-        <div id="u7037_div" class=""></div>
-        <div id="u7037_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Connect on&nbsp; </span><a id="u7038" class="link"><span style="color:#0000FF;">Linkedin</span></a></p>
+      <div id="u7027" class="ax_default box_1">
+        <div id="u7027_div" class=""></div>
+        <div id="u7027_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Connect on&nbsp; </span><a id="u7028" class="link"><span style="color:#0000FF;">Linkedin</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7039" class="ax_default image1">
-        <img id="u7039_img" class="img " src="images/cleanuxd_-__homepage/u20.png"/>
+      <div id="u7029" class="ax_default image1">
+        <img id="u7029_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u20.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7040" class="ax_default box_1">
-        <div id="u7040_div" class=""></div>
-        <div id="u7040_text" class="text ">
+      <div id="u7030" class="ax_default box_1">
+        <div id="u7030_div" class=""></div>
+        <div id="u7030_text" class="text ">
           <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span><span style="text-decoration:underline;color:#0000FF;">tien.uxarchitect@gmail.com</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7041" class="ax_default image1">
-        <img id="u7041_img" class="img " src="images/cleanuxd_-__homepage/u22.png"/>
+      <div id="u7031" class="ax_default image1">
+        <img id="u7031_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u22.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7042" class="ax_default box_1">
-        <div id="u7042_div" class=""></div>
-        <div id="u7042_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Send me a tweet on </span><a id="u7043" class="link"><span style="color:#0000FF;">Twitter</span></a></p>
+      <div id="u7032" class="ax_default box_1">
+        <div id="u7032_div" class=""></div>
+        <div id="u7032_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Send me a tweet on </span><a id="u7033" class="link"><span style="color:#0000FF;">Twitter</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7044" class="ax_default image1">
-        <img id="u7044_img" class="img " src="images/cleanuxd_-__homepage/u25.png"/>
+      <div id="u7034" class="ax_default image1">
+        <img id="u7034_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u25.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7035" class="ax_default box_1">
+        <div id="u7035_div" class=""></div>
+        <div id="u7035_text" class="text ">
+          <p style="font-size:28px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:28px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p><p style="font-size:20px;"><span style="font-family:'Barlow Regular', 'Barlow';">Camera Strike</span></p><p style="font-size:16px;"><span style="font-family:'Lato Regular', 'Lato';">Mobile App UX Design</span></p><p style="font-size:18px;"><span style="font-family:'Barlow Regular', 'Barlow';"><br></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u7036" class="ax_default image1">
+        <img id="u7036_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u245.png"/>
       </div>
     </div>
   </body>
