--- a/tien_ng_-_ux_architect_-_work_samples.html
+++ b/tien_ng_-_ux_architect_-_work_samples.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>CleanUXD -&nbsp; Work Samples</title>
+    <title>Tien Ng - UX Architect - Work Samples</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/cleanuxd_-__work_samples/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/tien_ng_-_ux_architect_-_work_samples/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato" type="text/css" rel="stylesheet"/>
@@ -34,7 +34,7 @@
     <script src="resources/scripts/prototypePre.js"></script>
     <script src="data/document.js"></script>
     <script src="resources/scripts/prototypePost.js"></script>
-    <script src="files/cleanuxd_-__work_samples/data.js"></script>
+    <script src="files/tien_ng_-_ux_architect_-_work_samples/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -62,12 +62,12 @@
 
           <!-- Unnamed (Rectangle) -->
           <div id="u434" class="ax_default box_1">
-            <img id="u434_img" class="img " src="images/cleanuxd_-__homepage/u11.png"/>
+            <img id="u434_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u11.png"/>
           </div>
 
           <!-- Unnamed (Image) -->
           <div id="u435" class="ax_default image1">
-            <img id="u435_img" class="img " src="images/cleanuxd_-__homepage/u12.png"/>
+            <img id="u435_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u12.png"/>
           </div>
 
           <!-- Unnamed (Rectangle) -->
@@ -96,7 +96,7 @@
 
           <!-- Unnamed (Image) -->
           <div id="u440" class="ax_default image1">
-            <img id="u440_img" class="img " src="images/cleanuxd_-__homepage/u17.png"/>
+            <img id="u440_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u17.png"/>
           </div>
 
           <!-- Unnamed (Rectangle) -->
@@ -109,7 +109,7 @@
 
           <!-- Unnamed (Image) -->
           <div id="u443" class="ax_default image1">
-            <img id="u443_img" class="img " src="images/cleanuxd_-__homepage/u20.png"/>
+            <img id="u443_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u20.png"/>
           </div>
 
           <!-- Unnamed (Rectangle) -->
@@ -122,7 +122,7 @@
 
           <!-- Unnamed (Image) -->
           <div id="u445" class="ax_default image1">
-            <img id="u445_img" class="img " src="images/cleanuxd_-__homepage/u22.png"/>
+            <img id="u445_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u22.png"/>
           </div>
 
           <!-- Unnamed (Rectangle) -->
@@ -135,7 +135,7 @@
 
           <!-- Unnamed (Image) -->
           <div id="u448" class="ax_default image1">
-            <img id="u448_img" class="img " src="images/cleanuxd_-__homepage/u25.png"/>
+            <img id="u448_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u25.png"/>
           </div>
 
           <!-- Unnamed (Rectangle) -->
@@ -243,37 +243,37 @@
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u466" class="ax_default line">
-        <img id="u466_img" class="img " src="images/cleanuxd_-__homepage/u137.png"/>
+        <img id="u466_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u137.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u467" class="ax_default line">
-        <img id="u467_img" class="img " src="images/cleanuxd_-__homepage/u138.png"/>
+        <img id="u467_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u138.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u468" class="ax_default line">
-        <img id="u468_img" class="img " src="images/cleanuxd_-__homepage/u139.png"/>
+        <img id="u468_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u139.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u469" class="ax_default line">
-        <img id="u469_img" class="img " src="images/cleanuxd_-__homepage/u139.png"/>
+        <img id="u469_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u139.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u470" class="ax_default line">
-        <img id="u470_img" class="img " src="images/cleanuxd_-__homepage/u139.png"/>
+        <img id="u470_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u139.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u471" class="ax_default line">
-        <img id="u471_img" class="img " src="images/cleanuxd_-__homepage/u139.png"/>
+        <img id="u471_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u139.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u472" class="ax_default line">
-        <img id="u472_img" class="img " src="images/cleanuxd_-__homepage/u139.png"/>
+        <img id="u472_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u139.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -350,7 +350,7 @@
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u482" class="ax_default line">
-        <img id="u482_img" class="img " src="images/cleanuxd_-__homepage/u153.png"/>
+        <img id="u482_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u153.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -491,12 +491,12 @@
 
       <!-- Unnamed (Image) -->
       <div id="u500" class="ax_default image1">
-        <img id="u500_img" class="img " src="images/cleanuxd_-__homepage/u171.png"/>
+        <img id="u500_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u171.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u501" class="ax_default image1">
-        <img id="u501_img" class="img " src="images/cleanuxd_-__homepage/u171.png"/>
+        <img id="u501_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u171.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -573,37 +573,37 @@
 
       <!-- Unnamed (Horizontal Line) -->
       <div id="u511" class="ax_default line">
-        <img id="u511_img" class="img " src="images/cleanuxd_-__homepage/u153.png"/>
+        <img id="u511_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u153.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u512" class="ax_default image1">
-        <img id="u512_img" class="img " src="images/cleanuxd_-__homepage/u171.png"/>
+        <img id="u512_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u171.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u513" class="ax_default image1">
-        <img id="u513_img" class="img " src="images/cleanuxd_-__homepage/u171.png"/>
+        <img id="u513_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u171.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u514" class="ax_default image1">
-        <img id="u514_img" class="img " src="images/cleanuxd_-__homepage/u171.png"/>
+        <img id="u514_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u171.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u515" class="ax_default image1">
-        <img id="u515_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+        <img id="u515_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u516" class="ax_default image1">
-        <img id="u516_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+        <img id="u516_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u517" class="ax_default image1">
-        <img id="u517_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+        <img id="u517_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -647,12 +647,12 @@
 
         <!-- Unnamed (Image) -->
         <div id="u526" class="ax_default image1">
-          <img id="u526_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+          <img id="u526_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
         </div>
 
         <!-- Unnamed (Image) -->
         <div id="u527" class="ax_default image1">
-          <img id="u527_img" class="img " src="images/cleanuxd_-__homepage/u233.png"/>
+          <img id="u527_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u233.png"/>
         </div>
       </div>
 
@@ -669,7 +669,7 @@
 
         <!-- Unnamed (Image) -->
         <div id="u530" class="ax_default image1">
-          <img id="u530_img" class="img " src="images/cleanuxd_-__homepage/u236.png"/>
+          <img id="u530_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u236.png"/>
         </div>
       </div>
 
@@ -691,12 +691,12 @@
 
       <!-- Unnamed (Image) -->
       <div id="u533" class="ax_default image1">
-        <img id="u533_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+        <img id="u533_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u534" class="ax_default image1">
-        <img id="u534_img" class="img " src="images/cleanuxd_-__homepage/u219.png"/>
+        <img id="u534_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u219.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -720,18 +720,18 @@
 
         <!-- Unnamed (Image) -->
         <div id="u538" class="ax_default image1">
-          <img id="u538_img" class="img " src="images/cleanuxd_-__homepage/u244.png"/>
+          <img id="u538_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u244.png"/>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u539" class="ax_default image1">
-        <img id="u539_img" class="img " src="images/cleanuxd_-__homepage/u245.png"/>
+        <img id="u539_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u245.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u540" class="ax_default image1">
-        <img id="u540_img" class="img " src="images/cleanuxd_-__homepage/u246.png"/>
+        <img id="u540_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u246.png"/>
       </div>
 
       <!-- Main Nav - Home (Dynamic Panel) -->
@@ -741,12 +741,12 @@
 
             <!-- Unnamed (Rectangle) -->
             <div id="u542" class="ax_default box_1">
-              <img id="u542_img" class="img " src="images/cleanuxd_-__homepage/u1.png"/>
+              <img id="u542_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u1.png"/>
             </div>
 
             <!-- Nav - Me (Rectangle) -->
             <div id="u543" class="ax_default box_1" data-label="Nav - Me">
-              <img id="u543_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u543_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u543_text" class="text ">
                 <p><span>About Me</span></p>
               </div>
@@ -754,7 +754,7 @@
 
             <!-- Nav - Work (Rectangle) -->
             <div id="u544" class="ax_default box_1" data-label="Nav - Work">
-              <img id="u544_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u544_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u544_text" class="text ">
                 <p><span>Work Samples</span></p>
               </div>
@@ -762,7 +762,7 @@
 
             <!-- Nav - Process (Rectangle) -->
             <div id="u545" class="ax_default box_1" data-label="Nav - Process">
-              <img id="u545_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u545_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u545_text" class="text ">
                 <p><span>UX Process</span></p>
               </div>
@@ -770,7 +770,7 @@
 
             <!-- Nav - Contact (Rectangle) -->
             <div id="u546" class="ax_default box_1" data-label="Nav - Contact">
-              <img id="u546_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u546_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u546_text" class="text ">
                 <p><span>Contact</span></p>
               </div>
@@ -778,7 +778,7 @@
 
             <!-- Nav - Home (Rectangle) -->
             <div id="u547" class="ax_default box_1" data-label="Nav - Home">
-              <img id="u547_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u547_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u547_text" class="text ">
                 <p><span>Home</span></p>
               </div>
@@ -786,7 +786,7 @@
 
             <!-- Nav - Lookbook (Rectangle) -->
             <div id="u548" class="ax_default box_1" data-label="Nav - Lookbook">
-              <img id="u548_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u548_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u548_text" class="text ">
                 <p><span>UX Lookbook</span></p>
               </div>
@@ -794,7 +794,7 @@
 
             <!-- Nav - Writings (Rectangle) -->
             <div id="u549" class="ax_default box_1" data-label="Nav - Writings">
-              <img id="u549_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u549_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u549_text" class="text ">
                 <p><span>Writings</span></p>
               </div>
