--- a/tengelawfirm_wireframes_preview_-_practice_area.html
+++ b/tengelawfirm_wireframes_preview_-_practice_area.html
@@ -670,7 +670,7 @@
       <div id="u5135" class="ax_default paragraph1">
         <div id="u5135_div" class=""></div>
         <div id="u5135_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">DENVER OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">1515 Wynkoop Street </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 360 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Denver, CO 80202</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">DENVER OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">1515 Wynkoop Street </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 360 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Denver, CO 80202</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
         </div>
       </div>
 
@@ -678,7 +678,7 @@
       <div id="u5136" class="ax_default paragraph1">
         <div id="u5136_div" class=""></div>
         <div id="u5136_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">BOULDER OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">2575 Pearl Street </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 230 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Boulder, CO 80302</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">BOULDER OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">2575 Pearl Street </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 230 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Boulder, CO 80302</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp; 303.665.2929</span></p>
         </div>
       </div>
 
@@ -686,7 +686,7 @@
       <div id="u5137" class="ax_default paragraph1">
         <div id="u5137_div" class=""></div>
         <div id="u5137_text" class="text ">
-          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">FORT COLLINS OFFICE </span><span style="font-family:'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri';font-weight:400;">123 N. College Avenue </span></p><p><span style="font-family:'Calibri';font-weight:400;">Suite 200 </span></p><p><span style="font-family:'Calibri';font-weight:400;">Fort Collins, CO 80524</span></p><p><span style="font-family:'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 970.212.4777</span></p>
+          <p><span style="font-family:'Calibri Bold', 'Calibri';font-weight:700;">FORT COLLINS OFFICE </span><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;color:#0000FF;">- Get Directions</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">123 N. College Avenue </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Suite 200 </span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">Fort Collins, CO 80524</span></p><p><span style="font-family:'Calibri Regular', 'Calibri';font-weight:400;">&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 970.212.4777</span></p>
         </div>
       </div>
 
