--- a/tien_ng_-_ux_architect_-_about_me.html
+++ b/tien_ng_-_ux_architect_-_about_me.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>CleanUXD -&nbsp; About Me</title>
+    <title>Tien Ng - UX Architect - About Me</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/cleanuxd_-__about_me/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/tien_ng_-_ux_architect_-_about_me/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato" type="text/css" rel="stylesheet"/>
@@ -34,7 +34,7 @@
     <script src="resources/scripts/prototypePre.js"></script>
     <script src="data/document.js"></script>
     <script src="resources/scripts/prototypePost.js"></script>
-    <script src="files/cleanuxd_-__about_me/data.js"></script>
+    <script src="files/tien_ng_-_ux_architect_-_about_me/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -46,12 +46,12 @@
 
       <!-- Unnamed (Rectangle) -->
       <div id="u248" class="ax_default box_1">
-        <img id="u248_img" class="img " src="images/cleanuxd_-__homepage/u9.png"/>
+        <img id="u248_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u9.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u249" class="ax_default image1">
-        <img id="u249_img" class="img " src="images/cleanuxd_-__about_me/u249.png"/>
+        <img id="u249_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u249.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -99,12 +99,12 @@
 
         <!-- Unnamed (Image) -->
         <div id="u257" class="ax_default image1">
-          <img id="u257_img" class="img " src="images/cleanuxd_-__about_me/u257.png"/>
+          <img id="u257_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u257.png"/>
         </div>
 
         <!-- Unnamed (Image) -->
         <div id="u258" class="ax_default image1">
-          <img id="u258_img" class="img " src="images/cleanuxd_-__about_me/u258.png"/>
+          <img id="u258_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u258.png"/>
         </div>
       </div>
 
@@ -119,12 +119,12 @@
 
         <!-- Unnamed (Rectangle) -->
         <div id="u262" class="ax_default box_1">
-          <img id="u262_img" class="img " src="images/cleanuxd_-__homepage/u11.png"/>
+          <img id="u262_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u11.png"/>
         </div>
 
         <!-- Unnamed (Image) -->
         <div id="u263" class="ax_default image1">
-          <img id="u263_img" class="img " src="images/cleanuxd_-__homepage/u12.png"/>
+          <img id="u263_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u12.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
@@ -153,7 +153,7 @@
 
         <!-- Unnamed (Image) -->
         <div id="u268" class="ax_default image1">
-          <img id="u268_img" class="img " src="images/cleanuxd_-__homepage/u17.png"/>
+          <img id="u268_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u17.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
@@ -166,7 +166,7 @@
 
         <!-- Unnamed (Image) -->
         <div id="u271" class="ax_default image1">
-          <img id="u271_img" class="img " src="images/cleanuxd_-__homepage/u20.png"/>
+          <img id="u271_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u20.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
@@ -179,7 +179,7 @@
 
         <!-- Unnamed (Image) -->
         <div id="u273" class="ax_default image1">
-          <img id="u273_img" class="img " src="images/cleanuxd_-__homepage/u22.png"/>
+          <img id="u273_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u22.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
@@ -192,7 +192,7 @@
 
         <!-- Unnamed (Image) -->
         <div id="u276" class="ax_default image1">
-          <img id="u276_img" class="img " src="images/cleanuxd_-__homepage/u25.png"/>
+          <img id="u276_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u25.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
@@ -210,12 +210,12 @@
 
       <!-- Unnamed (Image) -->
       <div id="u279" class="ax_default image1">
-        <img id="u279_img" class="img " src="images/cleanuxd_-__about_me/u279.jpg"/>
+        <img id="u279_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u279.jpg"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u280" class="ax_default box_1">
-        <img id="u280_img" class="img " src="images/cleanuxd_-__about_me/u280.png"/>
+        <img id="u280_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u280.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -252,7 +252,7 @@
 
       <!-- Unnamed (Image) -->
       <div id="u286" class="ax_default image1">
-        <img id="u286_img" class="img " src="images/cleanuxd_-__about_me/u286.png"/>
+        <img id="u286_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u286.png"/>
       </div>
 
       <!-- Footer (Hot Spot) -->
@@ -272,12 +272,12 @@
 
             <!-- Unnamed (Rectangle) -->
             <div id="u290" class="ax_default box_1">
-              <img id="u290_img" class="img " src="images/cleanuxd_-__homepage/u1.png"/>
+              <img id="u290_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u1.png"/>
             </div>
 
             <!-- Nav - Me (Rectangle) -->
             <div id="u291" class="ax_default box_1" data-label="Nav - Me">
-              <img id="u291_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u291_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u291_text" class="text ">
                 <p><span>About Me</span></p>
               </div>
@@ -285,7 +285,7 @@
 
             <!-- Nav - Work (Rectangle) -->
             <div id="u292" class="ax_default box_1" data-label="Nav - Work">
-              <img id="u292_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u292_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u292_text" class="text ">
                 <p><span>Work Samples</span></p>
               </div>
@@ -293,7 +293,7 @@
 
             <!-- Nav - Process (Rectangle) -->
             <div id="u293" class="ax_default box_1" data-label="Nav - Process">
-              <img id="u293_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u293_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u293_text" class="text ">
                 <p><span>UX Process</span></p>
               </div>
@@ -301,7 +301,7 @@
 
             <!-- Nav - Contact (Rectangle) -->
             <div id="u294" class="ax_default box_1" data-label="Nav - Contact">
-              <img id="u294_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u294_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u294_text" class="text ">
                 <p><span>Contact</span></p>
               </div>
@@ -309,7 +309,7 @@
 
             <!-- Nav - Home (Rectangle) -->
             <div id="u295" class="ax_default box_1" data-label="Nav - Home">
-              <img id="u295_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u295_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u295_text" class="text ">
                 <p><span>Home</span></p>
               </div>
@@ -317,7 +317,7 @@
 
             <!-- Nav - Lookbook (Rectangle) -->
             <div id="u296" class="ax_default box_1" data-label="Nav - Lookbook">
-              <img id="u296_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u296_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u296_text" class="text ">
                 <p><span>UX Lookbook</span></p>
               </div>
@@ -325,7 +325,7 @@
 
             <!-- Nav - Writings (Rectangle) -->
             <div id="u297" class="ax_default box_1" data-label="Nav - Writings">
-              <img id="u297_img" class="img " src="images/cleanuxd_-__homepage/nav_-_me_u2.png"/>
+              <img id="u297_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
               <div id="u297_text" class="text ">
                 <p><span>Writings</span></p>
               </div>
