--- a/tien_ng_-_ux_architect_-_my_writings.html
+++ b/tien_ng_-_ux_architect_-_my_writings.html
@@ -12,6 +12,23 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato" type="text/css" rel="stylesheet"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/prototypePre.js"></script>
@@ -28,185 +45,215 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u7427" class="ax_default image1">
-        <img id="u7427_img" class="img " src="images/tien_ng_-_ux_architect_-_my_writings/u7427.png"/>
+      <div id="u7476" class="ax_default image1">
+        <img id="u7476_img" class="img " src="images/tien_ng_-_ux_architect_-_my_writings/u7476.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7428" class="ax_default paragraph1">
-        <div id="u7428_div" class=""></div>
-        <div id="u7428_text" class="text ">
+      <div id="u7477" class="ax_default paragraph1">
+        <div id="u7477_div" class=""></div>
+        <div id="u7477_text" class="text ">
           <p><span>Thank you for your interest, </span></p><p><span>I'm on my way to write more about my work and life experience. </span></p><p><span>So I will update this page very soon.&nbsp; </span></p><p><span>Meanwhile, please visit other pages in this website for your reference.</span></p>
-        </div>
-      </div>
-
-      <!-- Main Nav - Home (Dynamic Panel) -->
-      <div id="u7429" class="ax_default" data-label="Main Nav - Home">
-        <div id="u7429_state0" class="panel_state" data-label="State1" style="">
-          <div id="u7429_state0_content" class="panel_state_content">
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u7430" class="ax_default box_1">
-              <img id="u7430_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u1.png"/>
-            </div>
-
-            <!-- Nav - Me (Rectangle) -->
-            <div id="u7431" class="ax_default box_1" data-label="Nav - Me">
-              <img id="u7431_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7431_text" class="text ">
-                <p><span>About Me</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Work (Rectangle) -->
-            <div id="u7432" class="ax_default box_1" data-label="Nav - Work">
-              <img id="u7432_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7432_text" class="text ">
-                <p><span>Work Samples</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Process (Rectangle) -->
-            <div id="u7433" class="ax_default box_1" data-label="Nav - Process">
-              <img id="u7433_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7433_text" class="text ">
-                <p><span>UX Process</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Contact (Rectangle) -->
-            <div id="u7434" class="ax_default box_1" data-label="Nav - Contact">
-              <img id="u7434_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7434_text" class="text ">
-                <p><span>Contact</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Home (Rectangle) -->
-            <div id="u7435" class="ax_default box_1" data-label="Nav - Home">
-              <img id="u7435_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7435_text" class="text ">
-                <p><span>Home</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Lookbook (Rectangle) -->
-            <div id="u7436" class="ax_default box_1" data-label="Nav - Lookbook">
-              <img id="u7436_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7436_text" class="text ">
-                <p><span>UX Lookbook</span></p>
-              </div>
-            </div>
-
-            <!-- Nav - Writings (Rectangle) -->
-            <div id="u7437" class="ax_default box_1" data-label="Nav - Writings">
-              <img id="u7437_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u2.png"/>
-              <div id="u7437_text" class="text ">
-                <p><span>Writings</span></p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
       <!-- Unnamed (CleanUXD - Footer) -->
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7439" class="ax_default box_1">
-        <img id="u7439_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u11.png"/>
+      <div id="u7479" class="ax_default box_1">
+        <img id="u7479_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u16.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7440" class="ax_default image1">
-        <img id="u7440_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u12.png"/>
+      <div id="u7480" class="ax_default image1">
+        <img id="u7480_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u17.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7441" class="ax_default heading_1">
-        <div id="u7441_div" class=""></div>
-        <div id="u7441_text" class="text ">
+      <div id="u7481" class="ax_default heading_1">
+        <div id="u7481_div" class=""></div>
+        <div id="u7481_text" class="text ">
           <p><span>Hi, I'm looking for a remote full-time UX position now :)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7442" class="ax_default paragraph1">
-        <div id="u7442_div" class=""></div>
-        <div id="u7442_text" class="text ">
+      <div id="u7482" class="ax_default paragraph1">
+        <div id="u7482_div" class=""></div>
+        <div id="u7482_text" class="text ">
           <p><span>Copyright © 2018&nbsp; -&nbsp; Tien Nguyen. </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7443" class="ax_default box_1">
-        <div id="u7443_div" class=""></div>
-        <div id="u7443_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; View my </span><a id="u7444" class="link"><span style="color:#669900;">Upwork Profile </span></a><span>&nbsp; </span></p>
+      <div id="u7483" class="ax_default box_1">
+        <div id="u7483_div" class=""></div>
+        <div id="u7483_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; View my </span><a id="u7484" class="link"><span style="color:#669900;">Upwork Profile </span></a><span>&nbsp; </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7445" class="ax_default image1">
-        <img id="u7445_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u17.png"/>
+      <div id="u7485" class="ax_default image1">
+        <img id="u7485_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u22.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7446" class="ax_default box_1">
-        <div id="u7446_div" class=""></div>
-        <div id="u7446_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Connect on&nbsp; </span><a id="u7447" class="link"><span style="color:#0000FF;">Linkedin</span></a></p>
+      <div id="u7486" class="ax_default box_1">
+        <div id="u7486_div" class=""></div>
+        <div id="u7486_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Connect on&nbsp; </span><a id="u7487" class="link"><span style="color:#0000FF;">Linkedin</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7448" class="ax_default image1">
-        <img id="u7448_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u20.png"/>
+      <div id="u7488" class="ax_default image1">
+        <img id="u7488_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u25.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7449" class="ax_default box_1">
-        <div id="u7449_div" class=""></div>
-        <div id="u7449_text" class="text ">
+      <div id="u7489" class="ax_default box_1">
+        <div id="u7489_div" class=""></div>
+        <div id="u7489_text" class="text ">
           <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Email: </span><span style="text-decoration:underline;color:#0000FF;">tien.uxarchitect@gmail.com</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7450" class="ax_default image1">
-        <img id="u7450_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u22.png"/>
+      <div id="u7490" class="ax_default image1">
+        <img id="u7490_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u27.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7451" class="ax_default box_1">
-        <div id="u7451_div" class=""></div>
-        <div id="u7451_text" class="text ">
-          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Send me a tweet on </span><a id="u7452" class="link"><span style="color:#0000FF;">Twitter</span></a></p>
+      <div id="u7491" class="ax_default box_1">
+        <div id="u7491_div" class=""></div>
+        <div id="u7491_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; Send me a tweet on </span><a id="u7492" class="link"><span style="color:#0000FF;">Twitter</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u7453" class="ax_default image1">
-        <img id="u7453_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u25.png"/>
+      <div id="u7493" class="ax_default image1">
+        <img id="u7493_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u30.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u7454" class="ax_default paragraph1">
-        <div id="u7454_div" class=""></div>
-        <div id="u7454_text" class="text ">
+      <div id="u7494" class="ax_default paragraph1">
+        <div id="u7494_div" class=""></div>
+        <div id="u7494_text" class="text ">
           <p><span>Thank you for stopping-over on my website. I hope you will like my UX work samples and find it interesting! </span></p><p><span><br></span></p><p><span>I'm now looking for a remote full-time UX position where I can devote all of my UX skills and experience. So if you are looking for a UX&nbsp; member to join your team, please don't hesitate to contact me :) </span></p>
         </div>
       </div>
 
       <!-- Footer (Hot Spot) -->
-      <div id="u7455" class="ax_default" data-label="Footer">
+      <div id="u7495" class="ax_default" data-label="Footer">
       </div>
 
       <!-- Top (Hot Spot) -->
-      <div id="u7456" class="ax_default" data-label="Top">
+      <div id="u7496" class="ax_default" data-label="Top">
       </div>
 
       <!-- Unnamed (Hot Spot) -->
-      <div id="u7457" class="ax_default">
+      <div id="u7497" class="ax_default">
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7498" class="ax_default box_1">
+        <img id="u7498_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u0.png"/>
+      </div>
+
+      <!-- Nav - Me (Rectangle) -->
+      <div id="u7499" class="ax_default box_1" data-label="Nav - Me">
+        <img id="u7499_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u1.png"/>
+        <div id="u7499_text" class="text ">
+          <p><span>About Me</span></p>
+        </div>
+      </div>
+
+      <!-- Nav - Process (Rectangle) -->
+      <div id="u7500" class="ax_default box_1" data-label="Nav - Process">
+        <img id="u7500_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u1.png"/>
+        <div id="u7500_text" class="text ">
+          <p><span>UX Design</span></p>
+        </div>
+      </div>
+
+      <!-- Nav - Contact (Rectangle) -->
+      <div id="u7501" class="ax_default box_1" data-label="Nav - Contact">
+        <img id="u7501_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u1.png"/>
+        <div id="u7501_text" class="text ">
+          <p><span>Contact</span></p>
+        </div>
+      </div>
+
+      <!-- Nav - Home (Rectangle) -->
+      <div id="u7502" class="ax_default box_1" data-label="Nav - Home">
+        <img id="u7502_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u1.png"/>
+        <div id="u7502_text" class="text ">
+          <p><span>Home</span></p>
+        </div>
+      </div>
+
+      <!-- Nav - Writings (Rectangle) -->
+      <div id="u7503" class="ax_default box_1" data-label="Nav - Writings">
+        <img id="u7503_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_me_u1.png"/>
+        <div id="u7503_text" class="text ">
+          <p><span>Writings</span></p>
+        </div>
+      </div>
+
+      <!-- UXD Dropdown (Dynamic Panel) -->
+      <div id="u7504" class="ax_default ax_default_hidden" data-label="UXD Dropdown" style="display:none; visibility: hidden">
+        <div id="u7504_state0" class="panel_state" data-label="State1" style="">
+          <div id="u7504_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Hot Spot) -->
+            <div id="u7505" class="ax_default">
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u7506" class="ax_default box_1">
+              <img id="u7506_img" class="img " src="images/tien_ng_-_ux_architect_-_work_samples/u453.png"/>
+            </div>
+
+            <!-- Nav - Work (Rectangle) -->
+            <div id="u7507" class="ax_default box_1" data-label="Nav - Work">
+              <img id="u7507_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_work_u9.png"/>
+              <div id="u7507_text" class="text ">
+                <p><span>Work Samples</span></p>
+              </div>
+            </div>
+
+            <!-- Nav - Lookbook (Rectangle) -->
+            <div id="u7508" class="ax_default box_1" data-label="Nav - Lookbook">
+              <img id="u7508_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_work_u9.png"/>
+              <div id="u7508_text" class="text ">
+                <p><span>Lookbook</span></p>
+              </div>
+            </div>
+
+            <!-- Nav - Process (Rectangle) -->
+            <div id="u7509" class="ax_default box_1" data-label="Nav - Process">
+              <img id="u7509_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_work_u9.png"/>
+              <div id="u7509_text" class="text ">
+                <p><span>Process</span></p>
+              </div>
+            </div>
+
+            <!-- Nav - Lookbook (Rectangle) -->
+            <div id="u7510" class="ax_default box_1" data-label="Nav - Lookbook">
+              <img id="u7510_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/nav_-_work_u9.png"/>
+              <div id="u7510_text" class="text ">
+                <p><span>Resume</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u7511" class="ax_default image1">
+        <img id="u7511_img" class="img " src="images/tien_ng_-_ux_architect_-_homepage/u13.png"/>
       </div>
     </div>
   </body>
